--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <h3>معلومات التواصل</h3>
                     <div class="info-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <p>المملكة العربية السعودية، الرياض، حي الصحافة</p>
+                        <p>االجمهورية الاسلامية الموريتانية، نواكشوط، الفلوجة </p>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-phone"></i>
